# playwright-mcp-python

./: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SESSION_MANAGEMENT.md  SESSION_SERVER_IMPLEMENTATION.md  SNAPSHOT_RETURNS.md  pyproject.toml  pytest.ini  ruff.toml  server.py  session_server.py
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
src/: server.py  session_server.py
src/schemas/: element.py
